packages/typ/tests/fixtures/diagnostics/0911_gadt_constructor_payload_int_mismatch_06.ml
type _ expr_zeta =
  | EInt_zeta : int -> int expr_zeta
  | EBool_zeta : bool -> bool expr_zeta

let _ : int expr_zeta = EInt_zeta true
